compiler: add submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "casper-ebuilds"]
 	path = ebuilds
 	url = git@github.com:acolinisi/casper-ebuilds.git
+[submodule "compiler"]
+	path = compiler
+	url = git@github.com:acolinisi/casper-compiler.git
