exp: tune-blur: auto tuning on GPU

--- a/exp/tune-blur/CMakeLists.txt
+++ b/exp/tune-blur/CMakeLists.txt
@@ -11,16 +11,25 @@ set(CMAKE_CXX_EXTENSIONS NO)
 find_package(Halide REQUIRED)
 
 add_executable(blur_cpu blur_cpu.cpp)
+add_executable(blur_gpu blur_gpu.cpp)
+set(TARGETS blur_cpu blur_gpu)
 
-target_compile_options(blur_cpu PRIVATE $<$<CXX_COMPILER_ID:GNU,Clang,AppleClang>:-O2>)
+add_test(NAME test_blur_cpu
+    COMMAND blur_cpu 0 1 1 "test_blur_cpu.csv")
+add_test(NAME test_blur_gpu
+    COMMAND blur_gpu 0 1 "test_blur_gpu.csv")
 
-target_link_libraries(blur_cpu
-                      PRIVATE
-                      Halide::Halide
-                      Halide::Tools
-                      )
+foreach(target ${TARGETS})
+    target_compile_options(${target}
+        PRIVATE $<$<CXX_COMPILER_ID:GNU,Clang,AppleClang>:-O2>)
 
-add_test(NAME test_blur_cpu COMMAND blur_cpu 1 1 "test_blur_cpu.csv")
-set_tests_properties(test_blur_cpu PROPERTIES
-                     PASS_REGULAR_EXPRESSION "Success!"
-                     SKIP_REGULAR_EXPRESSION "\\[SKIP\\]")
+    target_link_libraries(${target}
+                          PRIVATE
+                          Halide::Halide
+                          Halide::Tools
+                          )
+
+    set_tests_properties(test_${target} PROPERTIES
+                         PASS_REGULAR_EXPRESSION "Success!"
+                         SKIP_REGULAR_EXPRESSION "\\[SKIP\\]")
+endforeach()
