--- a/exp/tune-blur/Makefile
+++ b/exp/tune-blur/Makefile
@@ -11,8 +11,11 @@ profile-cpu-small: dat/cpu/small/blur.csv
 profile-cpu-large: dat/cpu/large/blur.csv
 profile-gpu-small: dat/gpu/small/blur.csv
 profile-gpu-large: dat/gpu/large/blur.csv
+profile-small: profile-cpu-small profile-gpu-small
+profile-large: profile-cpu-large profile-gpu-large
 .PHONY: profile-cpu-small profile-cpu-large
 .PHONY: profile-gpu-small profile-gpu-large
+.PHONY: profile-small profile-large
 
 %/:
 	mkdir -p $@
@@ -34,26 +37,44 @@ profile-small-clean: profile-cpu-small-clean profile-gpu-small-clean
 profile-large-clean: profile-cpu-large-clean profile-gpu-large-clean
 .PHONY: profile-small-clean profile-large-clean
 
-model-cpu-small: model/nn/cpu/small/blur_model.meta
-model-cpu-large: model/nn/cpu/large/blur_model.meta
-model-gpu-small: model/nn/gpu/small/blur_model.meta
-model-gpu-large: model/nn/gpu/large/blur_model.meta
+model-cpu-small: \
+	model/cpu/small/nn/blur_model.meta \
+	model/cpu/small/nnc/blur_model.meta
+model-cpu-large: \
+	model/cpu/large/nn/blur_model.meta \
+	model/cpu/large/nnc/blur_model.meta
+model-gpu-small: \
+	model/gpu/small/nn/blur_model.meta \
+	model/gpu/small/nnc/blur_model.meta
+model-gpu-large: \
+	model/gpu/large/nn/blur_model.meta \
+	model/gpu/large/nnc/blur_model.meta
+
 .PHONY: model-cpu-small model-cpu-large
 .PHONY: model-gpu-small model-gpu-large
 
-model/nn/cpu/small/blur_model.meta: TRAIN_SIZE=1
-model/nn/cpu/large/blur_model.meta: TRAIN_SIZE=2000
-model/nn/gpu/small/blur_model.meta: TRAIN_SIZE=1
-model/nn/gpu/large/blur_model.meta: TRAIN_SIZE=500
-model/nn/cpu/%/blur_model.meta: dat/cpu/%/blur.csv | model/nn/cpu/%/
-	python predict/pred_NN.py $< $(TRAIN_SIZE) 5 10000 $(@D)/blur_model
-model/nn/gpu/%/blur_model.meta: dat/gpu/%/blur.csv | model/nn/gpu/%/
-	python predict/pred_NN.py $< $(TRAIN_SIZE) 4 5000 $(@D)/blur_model
+model/cpu/small/%/blur_model.meta: TRAIN_SIZE=1
+model/cpu/large/%/blur_model.meta: TRAIN_SIZE=2000
+model/gpu/small/%/blur_model.meta: TRAIN_SIZE=1
+model/gpu/large/%/blur_model.meta: TRAIN_SIZE=500
+model/cpu/%/nn/blur_model.meta: TRAIN_FEATURES=5
+model/cpu/%/nnc/blur_model.meta: TRAIN_FEATURES=6
+model/gpu/%/nn/blur_model.meta: TRAIN_FEATURES=4
+model/gpu/%/nnc/blur_model.meta: TRAIN_FEATURES=5
+model/cpu/%/blur_model.meta: TRAIN_STEPS=10000
+model/gpu/%/blur_model.meta: TRAIN_STEPS=5000
+model/%/nn/blur_model.meta model/%/nnc/blur_model.meta: \
+	dat/%/blur.csv | model/%/nn/ model/%/nnc/
+	python predict.py $< \
+		$(TRAIN_SIZE) $(TRAIN_FEATURES) $(TRAIN_STEPS) \
+		$(@D)/blur_model
 
 model-cpu-%-clean:
-	rm -f model/nn/cpu/$*/blur_model*
+	rm -f model/cpu/$*/*/
 model-gpu-%-clean:
-	rm -f model/nn/gpu/$*/blur_model*
+	rm -f model/gpu/$*/*/
+model-small: model-cpu-small model-gpu-small
+model-large: model-cpu-large model-gpu-large
 model-small-clean: model-cpu-small-clean model-gpu-small-clean
 model-large-clean: model-cpu-large-clean model-gpu-large-clean
 .PHONY: model-small-clean model-large-clean
@@ -63,4 +84,4 @@ large-clean: profile-large-clean model-large-clean
 .PHONY: small-clean large-clean
 
 # Don't delete intemediate artifacts
-.PRECIOUS:
+.SECONDARY:
