tune: parameterize fft executable

--- a/exp/tune-blur/Makefile
+++ b/exp/tune-blur/Makefile
@@ -29,6 +29,11 @@ dat/gpu/small/blur.csv: | dat/gpu/small/
 dat/gpu/large/blur.csv: | dat/gpu/large/
 	profile/build/blur_gpu 5 5 $@
 
+dat/cpu/small/fft.csv: | dat/cpu/small/
+	profile/build/fft_cpu 2 2 1 1 1 $@
+dat/cpu/large/fft.csv: | dat/cpu/large/
+	profile/build/fft_cpu 2 2 1000 10 1000 $@
+
 profile-cpu-%-clean:
 	rm -f dat/cpu/$*/blur.csv
 profile-gpu-%-clean:
