exp/apps/mpitest: wait for debugger

--- a/exp/apps/mpitest/Makefile
+++ b/exp/apps/mpitest/Makefile
@@ -1,5 +1,10 @@
+all: mpitest mpitest_dbg
+
 mpitest: mpitest.c
-	mpicc -o $@ $<
+	mpicc -O0 -g -o $@ $<
+
+mpitest_dbg: mpitest.c
+	mpicc -O0 -g -DWAIT_FOR_DEBUGGER -o $@ $<
 
 clean:
-	rm -f *.o mpitest
+	rm -f *.o mpitest mpitest_dbg
