--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "compiler"]
 	path = compiler
 	url = https://github.com/acolinisi/casper-compiler.git
+[submodule "exp/apps/firedrake-bench"]
+	path = exp/apps/firedrake-bench
+	url = https://github.com/acolinisi/firedrake-bench.git
