exp/apps/osubench: set nodes not tasks

--- a/exp/apps/osubench/discovery/Makefile
+++ b/exp/apps/osubench/discovery/Makefile
@@ -47,7 +47,7 @@ NTASKS_PER_NODE?=16
 		--constraint "$(CONSTRAINT)" --mem 0 \
 		--time 00:$(MAX_TIME_MIN):00 \
 		$$(echo $* | sed \
-			's@\s*dat/bench-n-\([0-9]\+\)-N-\([0-9]\+\).log\s*@--nodes \1 --ntasks-per-node \2@') \
+			's@\s*dat/bench-n-\([0-9]\+\)-N-\([0-9]\+\).log\s*@--ntasks \1 --ntasks-per-node \2@') \
 		exec.sh make PATTERN="$(PATTERN)" $*
 	tail -f $*.{out,err}
 
