app/osubench/theta: use var for NODES

--- a/exp/osubench/theta/Makefile
+++ b/exp/osubench/theta/Makefile
@@ -13,7 +13,7 @@ MAX_TIME_MIN?=30
 ACCOUNT?=CASPER
 
 DATS=\
-     dat/bench-prefix-n-2-map-by-node.log
+     dat/bench-prefix-n-$(NODES)-map-by-$(MAP_BY).log
 
 all: $(patsubst %,%/job,$(DATS))
 
